--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "cypress:open": "cypress open",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "cypress": "^10.6.0",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
+    "next-i18next": "^12.0.1",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-easy-swipe": "^0.0.22",
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
